--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.5.1",
     "cypress": "^8.7.0",
+    "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.4",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.0",
     "sass-loader": "^12.3.0",
     "url-loader": "^4.1.1",
@@ -53,6 +54,7 @@
     "yaml-lint": "^1.2.4"
   },
   "scripts": {
+    "prebuild": "node ./source/js/envConfig.js",
     "build": "webpack && webpack --mode=production",
     "cypress": "npx cypress open",
     "i18n": "wpvuei18n makepot --exclude=node_modules,assets",
