title getting from env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_TITLE="Bluehost"
+VUE_APP_TITLE=Bluehost
 VUE_APP_COLOR_BLACK="#414141"
 VUE_APP_COLOR_GREY="#939393"
 VUE_APP_COLOR_LIGHT_BLACK="#414141"
