--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -43,7 +43,7 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@v2
         with:
           find: SITE_MIGRATOR_PLUGIN
-          replace: 'Bluehost Site Plugin'
+          replace: 'Bluehost Site Migrator'
           include: bluehost-site-migrator.php
  
       - name: Set Plugin Author
